--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -1,1 +1,35 @@
-{}
+{
+  "generalErrorTitle": "حدث خطأ ما",
+  "generalErrorBody": "حدث خطأ غير متوقع. يرجى المحاولة مرة أخرى لاحقًا أو الاتصال بالدعم.",
+  "connectionErrorTitle": "خطأ في الاتصال",
+  "connectionErrorBody": "تعذر الوصول إلى الخادم. يرجى التحقق من اتصالك بالإنترنت والمحاولة مرة أخرى.",
+  "retry": "إعادة المحاولة",
+  "serverErrorTitle": "البيانات غير متوفرة",
+  "serverErrorBody": "نواجه حاليًا مشكلة في استرداد البيانات من الخادم. يرجى المحاولة مرة أخرى لاحقًا.",
+  "generalError": "عذرًا، حدث خطأ!",
+  "networkError": "خطأ في اتصال الإنترنت",
+  "confirm": "تأكيد",
+  "welcomeGuest":"هلا بالضيف",
+  "helloAndWelcome":"هلا ومرحبا",
+  "joinUsButTellUsWhoYou":"تفضل فوت عنا ، بس خبرنا مين انت ؟",
+  "yourPhoneNumber":"رقم تلفونك",
+  "yourPassword":"باسووردك",
+  "enterYourPasswordHere":"ادخل باسووردك هان",
+  "forgotYourPassword":"نسيت باسسوردك ؟",
+  "welcome":"يا هلا تفضل",
+  "dontHaveAccount":"ما عندك حساب ؟",
+  "createAccount":"اعمل حساب وعرفنا بحالك",
+  "orPleaseLogThrough":"او تفضل فوت عنا من هان",
+  "searchCountryOrCode": "إبحث عن إسم أو رمز البلد",
+  "phoneNum": "رقم الهاتف",
+  "requiredField": "حقل مطلوب",
+  "invalidEmail": "بريد إلكتروني غير صحيح",
+  "invalidNumber": "الرقم غير صحيح",
+  "passwordTooShort": "يجب ان تتكون من ٦ رموز على الاقل",
+  "passwordNotMatch": "كلمة المرور غير متطابقة",
+  "helloDear":"هلا وغلا",
+  "whatAreYouLooking":"على شو بتدور ؟",
+  "more":"شو في بعد",
+  "officialSponsors":"الرعاة الرسميين",
+  "whatDoWehave":"شو في عندنا ؟"
+}
