--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,3 +1,35 @@
 {
-
+  "generalErrorTitle": "Something Went Wrong",
+  "generalErrorBody": "An unexpected error occurred. Please try again later or contact support.",
+  "connectionErrorTitle": "Connection Error",
+  "connectionErrorBody": "Unable to reach the server. Please check your internet connection and try again.",
+  "retry": "Retry",
+  "serverErrorTitle": "Data Unavailable",
+  "serverErrorBody": "We're currently having trouble retrieving data from the server. Please try again later.",
+  "generalError": "Oops, Something went wrong !",
+  "networkError": "Internet Connection Error",
+  "confirm": "Confirm",
+  "welcomeGuest":"Welcome guest",
+  "helloAndWelcome":"Hello and welcome",
+  "joinUsButTellUsWhoYou":"Please join us, but tell us who you are?",
+  "yourPhoneNumber":"Your phone number",
+  "yourPassword":"Your password",
+  "enterYourPasswordHere":"Enter your password here",
+  "forgotYourPassword":"Forgot your password?",
+  "welcome":"Welcome",
+  "dontHaveAccount":"Don't you have an account?",
+  "createAccount":"Create account",
+  "orPleaseLogThrough":"Or please log in through",
+  "searchCountryOrCode": "Search for the country name or dial code",
+  "phoneNum": "Phone number",
+  "requiredField": "Required field",
+  "invalidEmail": "Invalid email",
+  "invalidNumber": "Invalid number",
+  "passwordTooShort": "Must be at least 6 characters",
+  "passwordNotMatch": "password Does not Match",
+  "helloDear":"Hello, dear",
+  "whatAreYouLooking":"What are you looking for?",
+  "more":"More",
+  "officialSponsors":"Official sponsors",
+  "whatDoWehave":"What do we have?"
 }
