--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -31,5 +31,30 @@
   "whatAreYouLooking":"على شو بتدور ؟",
   "more":"شو في بعد",
   "officialSponsors":"الرعاة الرسميين",
-  "whatDoWehave":"شو في عندنا ؟"
+  "whatDoWehave":"شو في عندنا ؟",
+  "nashmi":"بالنشمي/ ـة",
+  "fillForm":"تفضل عرفنا بحالك ، معرفة الناس مكسب",
+  "whatYourName":"شو اسمك ؟",
+  "nameHintText":"عاشت الأسامي مقدماً",
+  "maleOrFemale":"نشمي ولا نشمية ؟",
+  "male":"نشمي",
+  "female":"نشميَّه",
+  "doYouAgree":"موافق على",
+  "termsAndPolicy":"الشروط والأحكام و سياسة الخصوصية ؟",
+  "alreadyHaveAccount":"احنا نعرفك من قبل ؟",
+  "login":"ياهلا تفضل",
+  "register":"والنّعم ، يا هلا",
+  "back":"ارجع ورا",
+  "receivedCodeOnYourPhone":"وصلك كود على تلفونك اعطينياه ولا تهون",
+  "codeHintText":"اكتب الكود هان",
+  "didntReceiveCode":"له له ما وصلك الكود ؟ ولا يهمك ارجع ابعثه مره ثانيه بعد",
+  "enterTheCode":"تفضل الكود",
+  "welcomeNashmi":"والنّعم ، يا هلا",
+  "helloHello":"هلا يا هلا",
+  "thanksFollowing":"غلبناك معنا ، بس مثل ما قلتلك معرفة الناس مكسب هسا تقدر تسوي كل شي ودكياه عنا بسوق نشمي على كيفك ، ولا تنسى تشوف يوم نشمي شو يصير عنا",
+  "cont":"تفضل فوت",
+  "dontCare":"ولا يهمك ",
+  "yaNashmi":"يالنشمي/ ـة",
+  "enterYourPhoneNumber":"بس اكتبلنا هان رقم تلفونك ، عشان نتعرف عليك رح نبعثلك كود على تلفونك",
+  "sendTheCode":"ابعث الكود"
 }
