--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -31,5 +31,30 @@
   "whatAreYouLooking":"What are you looking for?",
   "more":"More",
   "officialSponsors":"Official sponsors",
-  "whatDoWehave":"What do we have?"
+  "whatDoWehave":"What do we have?",
+  "nashmi":"dear",
+  "fillForm":"Please fill out the following form to create your own account",
+  "whatYourName":"What is your name?",
+  "nameHintText":"Enter your name here",
+  "maleOrFemale":"Male or female",
+  "male":"Male",
+  "female":"Female",
+  "doYouAgree":"Do you agree to the",
+  "termsAndPolicy":"terms and conditions and privacy policy?",
+  "alreadyHaveAccount":"Already have an account?",
+  "login":"Login",
+  "register":"Register",
+  "back":"Back",
+  "receivedCodeOnYourPhone":"You have received the code on your phone, please fill it in the following field",
+  "codeHintText":"Enter your code here",
+  "didntReceiveCode":"Didn't receive the code? Send it again after",
+  "enterTheCode":"Enter the code",
+  "welcomeNashmi":"Welcome",
+  "helloHello":"Hello, welcome",
+  "thanksFollowing":"Thank you for following. From now on, you can do anything with us in Nashmi Market however you want. Don’t forget to see what happens to us on Nashmi Day.",
+  "cont":"Continue",
+  "dontCare":"Don't care ",
+  "yaNashmi":"dear",
+  "enterYourPhoneNumber":"Please enter your phone number in the following field to identify you. We will send you a code to your phone",
+  "sendTheCode":"Send the code"
 }
