intro & offers & profile

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -81,5 +81,37 @@
   "yourNewPassword":"باسووردك الجديد",
   "confirmNewPassword":"باسووردك الجديد مره ثانية",
   "saveModifications":"حفظ التعديلات",
-  "editImage":"تغيير الصورة"
+  "editImage":"تغيير الصورة",
+  "toContactNashmiMarket":"للتواصل مع ادارة سوق نشمي",
+  "fillInfoToContactYou":"عبي بياناتك هان واحنا رح نتواصل معك بأقرب وقت",
+  "forComplaints":"للشكاوي والإقتراحات",
+  "fillComplaintToContactYou":"عبي شكوتك او اقتراحك هان واحنا رح نتواصل معك بأقرب وقت",
+  "title":"الموضوع",
+  "yourMessage":"رسالتك",
+  "messageTitle":"عنوان الرسالة",
+  "writeYourMessageHere":"اكتبلنا رسالتك هان",
+  "yourComplaintOrSuggestion":"شكوتك او اقتراحك",
+  "attachPicturesOrFiles":"ارفاق صور او ملفات",
+  "send":"ارسال",
+  "nashmiDay":"يوم النشمي",
+  "luxuriousOffers":"عروض فخمه",
+  "remainingTimeOffers":"الوقت المتبقي للعروض",
+  "offerDetails":"تفاصيل العرض",
+  "watchItNow":"يشاهده الآن",
+  "scanQR":"امسح الـ QR Code عشان تاخذ العرض",
+  "sold":"تم بيع",
+  "ofe":"من",
+  "catchUpBeforeOfferOver":"لحق حالك قبل ما يخلص العرض",
+  "share":"علِّم الربع بالسالفة",
+  "catchOffer":"يلا نلحق العرض",
+  "welcomeTo":"مرحبا بك في ",
+  "nashmiMarket":"سوق نشمي",
+  "commercialAndServiceFacilities":"منشآت تجارية وخدمية في ",
+  "allRegionsAndGovernorates":"في جميع المناطق والمحافظات ",
+  "present":"موجود",
+  "next":"التالي",
+  "introDes0":"استعد لتجربة مثالية في طلب الخدمات من المهنيين والفنيين بكل بساطة وبضغطة زر. تصفح المهنيين حسب التصنيفات وتحقق من خبرات ومهارات كل مهني وتقييماته التي حصل عليها من خلالنا",
+  "introDes1":"مطاعم، متاجر ، منشآت تجارية وخدمية جميعها تجدها في مكان واحد فقط سوق نشمي . ابحث وتصفح بكل بساطة حسب الأقسام والمناطق",
+  "introDes2":"ابحث من اي مكان في المملكة الأردنية الهاشمية عن اي خدمة او منشئة تحتاجها داخل المملكة الأردنية الهاشمية بكل بساطة.",
+  "skip":"تخطي"
 }
