--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -81,5 +81,37 @@
   "yourNewPassword":"Your new password",
   "confirmNewPassword":"Confirm new password",
   "saveModifications":"Save modifications",
-  "editImage":"Edit image"
+  "editImage":"Edit image",
+  "toContactNashmiMarket":"To contact Nashmi Market management",
+  "fillInfoToContactYou":"Fill in your information and we will contact you as soon as possible",
+  "forComplaints":"For complaints and suggestions",
+  "fillComplaintToContactYou":"Fill out your complaint or suggestion here and we will contact you as soon as possible",
+  "title":"Title",
+  "yourMessage":"Your message",
+  "messageTitle":"Message title",
+  "writeYourMessageHere":"Write us your message here",
+  "yourComplaintOrSuggestion":"Your complaint or suggestion",
+  "attachPicturesOrFiles":"Attach pictures or files",
+  "send":"Send",
+  "nashmiDay":"Nashmi day",
+  "luxuriousOffers":"Luxurious offers",
+  "remainingTimeOffers":"Remaining time for offers",
+  "offerDetails":"Offer details",
+  "watchItNow":"Watch it now",
+  "scanQR":"Scan the QR code to take the offer",
+  "sold":"sold",
+  "ofe":"of",
+  "catchUpBeforeOfferOver":"Catch up before the offer is over",
+  "share":"Share",
+  "catchOffer":"Let's catch the offer",
+  "welcomeTo":"Welcome to ",
+  "nashmiMarket":"Nashmi Market",
+  "commercialAndServiceFacilities":"Commercial and service facilities in ",
+  "allRegionsAndGovernorates":"In all regions and governorates It is ",
+  "present":"present",
+  "next":"Next",
+  "introDes0":"Get ready for an ideal experience in seeking services from professionals And technicians simply with the click of a button.Browse professionals by ratings and check expertise And the skills and evaluations of each professional that he obtained through us",
+  "introDes1":"Restaurants, stores, commercial and service facilities can all be found here Only one place, Nashmi Market.Simply search and browse by departments and regions",
+  "introDes2":"Search from anywhere in the Hashemite Kingdom of Jordan for any A service or facility you need within the Hashemite Kingdom of Jordan simply.",
+  "skip":"Skip"
 }
