--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -113,5 +113,7 @@
   "introDes0":"استعد لتجربة مثالية في طلب الخدمات من المهنيين والفنيين بكل بساطة وبضغطة زر. تصفح المهنيين حسب التصنيفات وتحقق من خبرات ومهارات كل مهني وتقييماته التي حصل عليها من خلالنا",
   "introDes1":"مطاعم، متاجر ، منشآت تجارية وخدمية جميعها تجدها في مكان واحد فقط سوق نشمي . ابحث وتصفح بكل بساطة حسب الأقسام والمناطق",
   "introDes2":"ابحث من اي مكان في المملكة الأردنية الهاشمية عن اي خدمة او منشئة تحتاجها داخل المملكة الأردنية الهاشمية بكل بساطة.",
-  "skip":"تخطي"
+  "skip":"تخطي",
+  "invalidCredentials": "بيانات غير صحيحة",
+  "cancel": "إلغاء"
 }
