--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -113,5 +113,7 @@
   "introDes0":"Get ready for an ideal experience in seeking services from professionals And technicians simply with the click of a button.Browse professionals by ratings and check expertise And the skills and evaluations of each professional that he obtained through us",
   "introDes1":"Restaurants, stores, commercial and service facilities can all be found here Only one place, Nashmi Market.Simply search and browse by departments and regions",
   "introDes2":"Search from anywhere in the Hashemite Kingdom of Jordan for any A service or facility you need within the Hashemite Kingdom of Jordan simply.",
-  "skip":"Skip"
+  "skip":"Skip",
+  "invalidCredentials": "Invalid credentials",
+  "cancel": "Cancel"
 }
