--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -115,5 +115,8 @@
   "introDes2":"ابحث من اي مكان في المملكة الأردنية الهاشمية عن اي خدمة او منشئة تحتاجها داخل المملكة الأردنية الهاشمية بكل بساطة.",
   "skip":"تخطي",
   "invalidCredentials": "بيانات غير صحيحة",
-  "cancel": "إلغاء"
+  "cancel": "إلغاء",
+  "requireRecentLogin": "هذه العملية حساسة وتتطلب مصادقة حديثة. قم بتسجيل الدخول مرة أخرى قبل إعادة محاولة هذا الطلب.",
+  "deleteAccountSuccess": "تم حذف حسابك بنجاح.",
+  "authFailed": "خطأ في عملية التسجيل"
 }
