--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -118,5 +118,9 @@
   "cancel": "إلغاء",
   "requireRecentLogin": "هذه العملية حساسة وتتطلب مصادقة حديثة. قم بتسجيل الدخول مرة أخرى قبل إعادة محاولة هذا الطلب.",
   "deleteAccountSuccess": "تم حذف حسابك بنجاح.",
-  "authFailed": "خطأ في عملية التسجيل"
+  "authFailed": "خطأ في عملية التسجيل",
+  "reviews": "التقييمات",
+  "reviewSubmittedMsg": "تم إرسال تقييمك بنجاح",
+  "comment": "التعليق",
+  "submit": "إرسال"
 }
