--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -122,5 +122,8 @@
   "reviews": "التقييمات",
   "reviewSubmittedMsg": "تم إرسال تقييمك بنجاح",
   "comment": "التعليق",
-  "submit": "إرسال"
+  "submit": "إرسال",
+  "termsMsg": "للمتابعة، يجب الموافقة على الشروط والاحكام",
+  "genderMsg": "اختر الجنس",
+  "enterOtp": "ادخل الرمز"
 }
