--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -125,5 +125,6 @@
   "submit": "إرسال",
   "termsMsg": "للمتابعة، يجب الموافقة على الشروط والاحكام",
   "genderMsg": "اختر الجنس",
-  "enterOtp": "ادخل الرمز"
+  "enterOtp": "ادخل الرمز",
+  "startAfter": "يبدأ بعد"
 }
