--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -125,5 +125,6 @@
   "submit": "Submit",
   "termsMsg": "to continue, must agree to terms and conditions",
   "genderMsg": "Select your gender",
-  "enterOtp": "Enter pin code"
+  "enterOtp": "Enter pin code",
+  "startAfter": "Start After"
 }
