--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -130,5 +130,7 @@
   "offerPriceLabel": "فقط ب {offerPrice} {currency}",
   "purchaseLimitLabel": "لأول {limit} مشتري فقط",
   "onlyWith": "فقط ب",
-  "insteadOf": "بدلاً من"
+  "insteadOf": "بدلاً من",
+  "offerEndedLabel": "ما رح تقدر تمسح الـ QR Code ، العرض خلص",
+  "successScanMsg": "تم المسح بنجاح"
 }
