--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -130,5 +130,7 @@
   "offerPriceLabel": "Only {offerPrice} {currency}",
   "purchaseLimitLabel": "For the first {limit} buyers only",
   "onlyWith": "only",
-  "insteadOf": "instead of"
+  "insteadOf": "instead of",
+  "offerEndedLabel": "You can't scan QR Code, Offer ended.",
+  "successScanMsg": "Scanned Successfully"
 }
