--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -132,5 +132,7 @@
   "onlyWith": "فقط ب",
   "insteadOf": "بدلاً من",
   "offerEndedLabel": "ما رح تقدر تمسح الـ QR Code ، العرض خلص",
-  "successScanMsg": "تم المسح بنجاح"
+  "successScanMsg": "تم المسح بنجاح",
+  "outOfStockText": "راحت عليك ، خلصت الكمية",
+  "purchasedText": "تم شراء العرض"
 }
