--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -135,5 +135,6 @@
   "successScanMsg": "Scanned Successfully",
   "outOfStockText": "Out of stock",
   "purchasedText": "Purchased",
-  "logout": "Logout"
+  "logout": "Logout",
+  "successfullyUpdated": "Successfully Updated"
 }
