city - state query

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -141,5 +141,10 @@
   "locationAccess": "السماح بالوصول للموقع",
   "locationAccessBody": "يرجى اعطاء صلاحية بالوصول إلى الموقع لنتمكن من عرض المحلات الأقرب منك",
   "allow": "السماح",
-  "locationServiceDisabled": "خدمة تحديد الموقع غير مفعلة في هاتفك"
+  "locationServiceDisabled": "خدمة تحديد الموقع غير مفعلة في هاتفك",
+  "states": "المحافظات",
+  "cities": "المدن",
+  "city": "المدينة",
+  "state": "المحافظة",
+  "save": "حفظ"
 }
