--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -146,5 +146,7 @@
   "cities": "المدن",
   "city": "المدينة",
   "state": "المحافظة",
-  "save": "حفظ"
+  "save": "حفظ",
+  "offerEndedMsg": "انتهى العرض"
+
 }
