--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -146,6 +146,7 @@
   "cities": "Cities",
   "city": "City",
   "state": "State",
-  "save": "Save"
+  "save": "Save",
+  "offerEndedMsg": "Offer Ended"
 
 }
