--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -82,7 +82,10 @@
   "confirmNewPassword":"باسووردك الجديد مره ثانية",
   "saveModifications":"حفظ التعديلات",
   "editImage":"تغيير الصورة",
-  "toContactNashmiMarket":"للتواصل مع ادارة سوق نشمي",
+  "joinNashmiTitle":"للانضمام لدليل مقدمي الخدمات والمنتجات في سوق نشمي",
+  "joinNashmiBody":"عبي بياناتك هان واحنا رح نتواصل معك بأقرب وقت",
+  "joinNashmi": "انضم ل{appName}",
+  "appName": "سوق نشمي",
   "fillInfoToContactYou":"عبي بياناتك هان واحنا رح نتواصل معك بأقرب وقت",
   "forComplaints":"للشكاوي والإقتراحات",
   "fillComplaintToContactYou":"عبي شكوتك او اقتراحك هان واحنا رح نتواصل معك بأقرب وقت",
