--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -83,6 +83,10 @@
   "saveModifications":"Save modifications",
   "editImage":"Edit image",
   "toContactNashmiMarket":"To contact Nashmi Market management",
+  "joinNashmiTitle":"Join the directory of service and product providers in Nashmi Market",
+  "joinNashmiBody":"Fill in your information here and we will contact you as soon as possible.",
+  "joinNashmi": "Join {appName}",
+  "appName": "Souq Nashmi",
   "fillInfoToContactYou":"Fill in your information and we will contact you as soon as possible",
   "forComplaints":"For complaints and suggestions",
   "fillComplaintToContactYou":"Fill out your complaint or suggestion here and we will contact you as soon as possible",
