--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -85,6 +85,7 @@
   "joinNashmiTitle":"للانضمام لدليل مقدمي الخدمات والمنتجات في سوق نشمي",
   "joinNashmiBody":"عبي بياناتك هان واحنا رح نتواصل معك بأقرب وقت",
   "joinNashmi": "انضم ل{appName}",
+  "toContactNashmiMarket": "للتواصل مع ادارة سوق نشمي",
   "appName": "سوق نشمي",
   "fillInfoToContactYou":"عبي بياناتك هان واحنا رح نتواصل معك بأقرب وقت",
   "forComplaints":"للشكاوي والإقتراحات",
