--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -153,7 +153,8 @@
   "state": "المحافظة",
   "save": "حفظ",
   "offerEndedMsg": "انتهى العرض",
-  "sentSuccessfully": "تم الإرسال بنجاح"
-
-
+  "sentSuccessfully": "تم الإرسال بنجاح",
+  "deleteAccount": "حذف الحساب",
+  "deleteAccountTitle": "حذف الحساب",
+  "deleteAccountBody": "هل أنت متأكد أنك تريد حذف حسابك ؟\nسيتم حذف جميع بياناتك."
 }
