--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -164,5 +164,6 @@
   "selectState": "Select State",
   "selectCity": "Select City",
   "tellUsAboutYou": "Tell us about yourself",
-  "aboutYou": "About you"
+  "aboutYou": "About you",
+  "determineArea": "Determine Area"
 }
