--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -165,5 +165,7 @@
   "selectCity": "إختر المدينة",
   "tellUsAboutYou": "سولفنا عنك شوية",
   "aboutYou": "عرفنا عن حالك",
-  "determineArea": "اختر المنطقة"
+  "determineArea": "اختر المنطقة",
+  "day": "يوم",
+  "nashmiAsNashmi": "نشمي"
 }
