--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -167,5 +167,6 @@
   "aboutYou": "عرفنا عن حالك",
   "determineArea": "اختر المنطقة",
   "day": "يوم",
-  "nashmiAsNashmi": "نشمي"
+  "nashmiAsNashmi": "نشمي",
+  "selectStateAndCity": "اختر المحافظة والمدينة"
 }
