--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -167,5 +167,6 @@
   "aboutYou": "About you",
   "determineArea": "Determine Area",
   "day": "Day",
-  "nashmiAsNashmi": "Nashmi"
+  "nashmiAsNashmi": "Nashmi",
+  "selectStateAndCity": "Select state an city"
 }
