--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -29,9 +29,9 @@
   "passwordNotMatch": "كلمة المرور غير متطابقة",
   "helloDear":"هلا وغلا",
   "whatAreYouLooking":"على شو بتدور ؟",
-  "more":"شو في بعد",
+  "more":"ادخل هان",
   "officialSponsors":"الرعاة الرسميين",
-  "whatDoWehave":"شو في عندنا ؟",
+  "whatDoWehave":"شوف الأقسام اللي عندنا",
   "nashmi":"بالنشمي/ ـة",
   "fillForm":"تفضل عرفنا بحالك ، معرفة الناس مكسب",
   "whatYourName":"شو اسمك ؟",
